# conta

./: README.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src/pages/: Asientos.tsx  EEFF.tsx  Ingesta.tsx  Revision.tsx
exports/: last_saldos_valuados.json
exports/EECC_DemoSA_2025-09-11_demo/: EEPN.csv  EEPN.docx  EERR.csv  EERR.docx  EFE.csv  EFE.docx  ESP.csv  ESP.docx  Notas_complementarias.docx
infra/: .env.example  docker-compose.dev.yml
services/api/: pyproject.toml
services/api/app/: config.py  db.py  main.py  models.py  schemas.py
services/api/app/routers/: cierre.py  clientes.py  eecc.py  eeff.py  inflacion.py  ingest.py  ingest_universal.py  reexpresar.py
services/api/app/utils/: accounting_rules.py  eecc_export.py  eecc_templates.py  exporters.py  ie_extract.py  inflacion.py  inflacion_indices.json  ocr_pipeline.py  pdf_native.py  qr_afip.py  recpam_engine.py  table_items.py  type_classifier.py  universal_pipeline.py  validators.py  valuation_engine.py  valuation_policies.py
services/worker/: worker.py
tests/: test_ie_extract.py
