[project]
name = "conta-api"
version = "0.2.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "pydantic",
  "alembic",
  "python-multipart",
  "opencv-python",
  "pytesseract",
  "Pillow",
  "numpy",
  "XlsxWriter",
  "python-docx"
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"
